2008-02-06 Dmitry Dulepov  <dmitry@typo3.org>

	* Added posibility to output only number of votes (without text) in tt_news marker

2008-02-05 Dmitry Dulepov  <dmitry@typo3.org>

	* Added ratings for comments (through "ratings" extension)

2008-01-28 Dmitry Dulepov  <dmitry@typo3.org>

	* Finished prefill form with FE user data

2008-01-25 Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #7104: impossible to select template from flexform
	* New feature (untested!): prefill form with FE user data

2008-01-24 Dmitry Dulepov  <dmitry@typo3.org>

	* Added hook for tt_news to display number of comments in List, Latest and Search modes
	* Updated manual

2008-01-23 Dmitry Dulepov  <dmitry@typo3.org>

	* Removed duplicate entry for templateFile from TS setup
	* Disabled separate languages for flexforms

2008-01-07 Dmitry Dulepov  <dmitry@typo3.org>

	* Labels moved from pi1_template.html to language file
	* New TYPO3 logo in the manual
	* Release of version 1.0.7
	* Added one forgotten label
	* Release of version 1.0.8

2007-12-20 Dmitry Dulepov  <dmitry@typo3.org>

	* Added CSH for flexforms (requires support from core, feature request #7028)

2007-12-19 Dmitry Dulepov  <dmitry@typo3.org>

	* Committed improved icon for closed comments (thanks to Ben)

2007-12-06 Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug: t3lib_BEfunc is not defined sometimes when using refindex

2007-12-06 Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug: Fatal error: Cannot redeclare tx_comments_mustupdatetempflexfile() in typo3conf/temp_CACHED_ps1660_ext_tables.php on line 2924

2007-12-05 Dmitry Dulepov  <dmitry@typo3.org>

	* Localized requiredFields_errorWrap
	* Removed "align" attribute from the template

2007-12-04 Dmitry Dulepov  <dmitry@typo3.org>

	* Added date formatting TypoScript setting
	* Updated documentation: added information about TypoScript template
	* Added check for correct inclusion of extension's TypoScript template to main TypoScript template
