@@ -1,6 +1,8 @@
 2008-02-06 Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Added posibility to output only number of votes (without text) in tt_news marker
+	* Fixed bug #7144: Day of week does not come out when server locale differs from website language
+	* Fixed bug #7154: Translation strings cannot be implemented using TS because of 'dots' in the label index
 
 2008-02-05 Dmitry Dulepov  <dmitry@typo3.org>
 
